First working implementation of adding new apartments
